<resources>
    <string name="app_name">app</string>
    <string name="rut">Rut</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="saldo_0">Saldo: $0</string>
    <string name="transferir">Transferir</string>
    <string name="movimientos">Movimientos</string>
    <string name="c_digo_de_validaci_n">Código de Validación</string>
    <string name="fecha">Fecha</string>
    <string name="monto">Monto</string>
    <string name="tipo_de_transferencia">Tipo de Transferencia</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="registrar">Registrar</string>
    <string name="depositar" />
</resources>