<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvInstruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Para comenzar inicia sesión con tu usuario y contraseña."
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tvBienvenido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRut"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvInstruccion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rut"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContrasena"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tilRut"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvOlvidasteContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Olvidaste tu contraseña?"

        app:layout_constraintTop_toBottomOf="@id/tilContrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvOlvidasteContrasena"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>